--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,16 @@ fastapi = "^0.101.1"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
 click = "^8.1.7"
 pydantic-settings = "^2.0.3"
+sqlalchemy = "^2.0.20"
+psycopg2-binary = "^2.9.7"
 
 
 [tool.poetry.group.local.dependencies]
 pre-commit = "^3.3.3"
+
+
+[tool.poetry.group.migration.dependencies]
+alembic = "^1.11.3"
 
 [build-system]
 requires = ["poetry-core"]
