--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,17 +11,13 @@ fastapi = "^0.101.1"
 uvicorn = { extras = ["standard"], version = "^0.23.2" }
 click = "^8.1.7"
 pydantic-settings = "^2.0.3"
-sqlalchemy = "^2.0.20"
+sqlalchemy = {extras = ["mypy"], version = "^2.0.20"}
 asyncpg = "^0.28.0"
 greenlet = "^2.0.2"
 python-jose = { extras = ["cryptography"], version = "^3.3.0" }
 orjson = "^3.9.5"
 result = "^0.13.1"
 mypy = "^1.5.1"
-
-
-[tool.poetry.group.local.dependencies]
-pre-commit = "^3.3.3"
 
 
 [tool.poetry.group.migration.dependencies]
@@ -40,6 +36,14 @@ freezegun = "^1.2.2"
 httpx = "^0.25.0"
 pytest-env = "^1.0.1"
 
+
+[tool.poetry.group.lint.dependencies]
+black = "^23.9.1"
+flake8 = "^6.1.0"
+mypy = "^1.5.1"
+pyupgrade = "^3.11.0"
+isort = {extras = ["colors"], version = "^5.12.0"}
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
@@ -52,6 +56,7 @@ line-length = 120
 color = true
 
 exclude = '.git'
+
 [tool.isort]
 # https://github.com/timothycrosley/isort/
 py_version = 311
@@ -65,13 +70,15 @@ multi_line_output = 3
 indent = 4
 color_output = true
 
-[tool.flake8]
-ignore = ["E501", "W503", "E203"]
-exclude = [".git", "__init__.py"]
-
 [tool.mypy]
 # https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
-plugins = ["pydantic.mypy"]
+plugins = [
+    "pydantic.mypy",
+    "sqlalchemy.ext.mypy.plugin"
+]
+exclude = [
+    "test/.*"
+]
 python_version = 3.11
 pretty = true
 show_traceback = true
