--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,3 +37,13 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies: [Flake8-pyproject]
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.5.1
+    hooks:
+    -   id: mypy
+        additional_dependencies: [
+          pydantic,
+          sqlalchemy,
+          result,
+        ]
